feat : added keywords

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2021"
 license = "MIT"
 repository = "https://github.com/racine-p-a/rs_comic_shrinker"
+readme = "README.md"
+keywords = ["comics", "bd", "manga", "cbr", "cbz"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
