--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ license = "MIT"
 repository = "https://github.com/racine-p-a/rs_comic_shrinker"
 readme = "README.md"
 keywords = ["comics", "bd", "manga", "cbr", "cbz"]
+categories = ["multimedia::images"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
